--- a/src/assets/icomoon/style.css
+++ b/src/assets/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?d231o2');
-  src:  url('fonts/icomoon.eot?d231o2#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?d231o2') format('truetype'),
-    url('fonts/icomoon.woff?d231o2') format('woff'),
-    url('fonts/icomoon.svg?d231o2#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?50hwux');
+  src:  url('fonts/icomoon.eot?50hwux#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?50hwux') format('truetype'),
+    url('fonts/icomoon.woff?50hwux') format('woff'),
+    url('fonts/icomoon.svg?50hwux#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,24 +25,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-googlepodcasts:before {
-  content: "\e900";
-  color: #4285f4;
+.icon-pencil:before {
+  content: "\e907";
 }
-.icon-language:before {
-  content: "\e901";
-}
-.icon-language1:before {
-  content: "\e902";
-}
-.icon-language2:before {
-  content: "\e903";
-}
-.icon-game-controller:before {
-  content: "\e904";
-}
-.icon-playlist_play:before {
-  content: "\e905";
+.icon-camera:before {
+  content: "\e906";
 }
 .icon-dice:before {
   content: "\e915";
@@ -139,4 +126,23 @@
 }
 .icon-google:before {
   content: "\ea88";
+}
+.icon-googlepodcasts:before {
+  content: "\e900";
+  color: #4285f4;
+}
+.icon-language:before {
+  content: "\e901";
+}
+.icon-language1:before {
+  content: "\e902";
+}
+.icon-language2:before {
+  content: "\e903";
+}
+.icon-game-controller:before {
+  content: "\e904";
+}
+.icon-playlist_play:before {
+  content: "\e905";
 }
